begin adding and styling footer comment area

--- a/index.html
+++ b/index.html
@@ -108,10 +108,37 @@
         <p>
           It’s as if, contained in the image of a mugshot hottie, there are two clashing stereotypes battling for supremacy over our final judgment. And given all the Facebook Likes for Meeks’ face, and the favorable comments it still garners, it seems the perceptual struggle it induces is thoroughly enjoyable.
         </p>
-        <p>
+        <p><em>
           Brian Gallagher is an assistant editor at Nautilus. Follow him on Twitter @brianscottg.
-        </p>
+        </em></p>
+        <p><em>
+          This post has been updated since originally running on Facts So Romantic in November, 2014.
+        </em></p>
       </section>
+      <hr>
+      <footer>
+        <div class="join">
+          <p>JOIN THE DISCUSSION</p>
+        </div>
+        <div class="input-head">
+          <ul>
+            <li>0 Comments</li>
+            <li>Nautilus</li>
+            <li>Login</li>
+          </ul>
+          <hr>
+          <hr>
+          <ul>
+            <li>Recommend</li>
+            <li>Share</li>
+            <li>Sort by Best</li>
+          </ul>
+          <form class="" action="index.html" method="post">
+            <img src="img/user.png" alt="" />
+            <textarea name="name" rows="4" cols="40"></textarea>
+          </form>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
