roughly place major comment-area elements

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
           </ul>
           <form class="" action="index.html" method="post">
             <img src="img/user.png" alt="" />
-            <textarea name="name" rows="4" cols="40"></textarea>
+            <textarea name="name"></textarea>
           </form>
+          <p>Be the first to comment.</p>
         </div>
       </footer>
     </div>
