finalize nav/style comment form

--- a/index.html
+++ b/index.html
@@ -10,35 +10,41 @@
   </head>
   <body>
       <nav>
-        <img id="logo" src="img/nautilus-logo.png" alt="" />
-        <ul>
-          <li><a href="#"><i class="fa fa-search"></i></a></li>
-          <li><a href="#">ISSUES</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">NEWSLETTER</a></li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        </ul>
+        <div class="container">
+          <img id="logo" src="img/nautilus-logo.png" alt="" />
+          <ul>
+            <li><a href="#"><i class="fa fa-search"></i></a></li>
+            <li><a href="#">ISSUES</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">NEWSLETTER</a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#">STORE</a></li>
+            <li><a href="#">PRIME</a></li>
+          </ul>
+          <img id="mag" src="img/nav-3d-mag.png" alt="" />
+        </div>
       </nav>
 
-    <div class="container">
+
       <header>
-        <div class="heading">
+        <div class="heading container-extra">
           <p class="category"><span>FACTS SO ROMANTIC</span> ON CULTURE</p>
           <h1>Here’s Why People Are Obsessed With Mugshot Hotties</h1>
           <p class="byline">POSTED BY BRIAN GALLAGHER ON FEB 25, 2016</p>
-          <hr>
-          <ul>
-            <li><a href="#">ADD A COMMENT</a></li>
-            <li><a href="#">FACEBOOK</a></li>
-            <li><a href="#">TWITTER</a></li>
-            <li><a href="#">EMAIL</a></li>
-            <li><a href="#">SHARING</a></li>
-          </ul>
-          <hr>
         </div>
-      </header>
+          <hr class="container">
+          <ul class="container">
+            <li><a href="#"><i class="fa fa-comment"></i> ADD A COMMENT</a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i> FACEBOOK</a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i> TWITTER</a></li>
+            <li><a href="#"><i class="fa fa-envelope-o"></i> EMAIL</a></li>
+            <li><a href="#"><i class="fa fa-share"></i> SHARING</a></li>
+          </ul>
+          <hr class="container">
 
+      </header>
+      <div class="container">
       <aside>
         <img src="img/subscribe.jpg" alt="subscribe">
         <div class="recent">
@@ -67,7 +73,7 @@
 
       <section>
         <p>
-          On June 18, 2014, a photo of a very handsome, no-name man was posted on the Web. Within 48 hours, it garnered 62,000 “Likes” on Facebook and became a media spectacle. Today, the Like count is up to almost 102,000, and the photo is still attracting comments. But thousands of pictures of highly attractive people are posted online every day, and no news articles are written about most of them—so why this one? Because this sultry photo was a mugshot.
+          <strong class="cap-start" >O</strong>n June 18, 2014, a photo of a very handsome, no-name man was posted on the Web. Within 48 hours, it garnered 62,000 “Likes” on Facebook and became a media spectacle. Today, the Like count is up to almost 102,000, and the photo is still attracting comments. But thousands of pictures of highly attractive people are posted online every day, and no news articles are written about most of them—so why this one? Because this sultry photo was a mugshot.
         </p>
         <img src="img/mugshot.jpg" alt="" />
         <div class="photo-info">
@@ -90,7 +96,7 @@
         <p>
           In a 1977 study, researchers wanted to see how labeling a photo with a man’s face as either “murderer” or “lifeboat captain” would affect their subjects’ ability to reconstruct an approximation of that face from memory using a police Photofit kit. They were then asked to rate the face for a number of traits (e.g., “intelligent,” “pleasant,” “good-looking,” “sociable,”) with ranks from 1 to 7. A second group then rated their impressions of the reconstructed face, but without the “murderer” and “lifeboat captain” labels.
         </p>
-        <p>
+        <p class="callout">
           It’s as if, contained in the image of a mugshot hottie, there are two clashing stereotypes battling for supremacy over our final judgment.
         </p>
         <p>
@@ -139,6 +145,7 @@
           </form>
           <p>Be the first to comment.</p>
         </div>
+        <hr>
       </footer>
     </div>
   </body>
